--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -514,6 +514,17 @@ config INPUT_BMG160
 	 Say Y here if you want support for the BMG160 gyroscope
 	 device. This driver only supports I2C communication.
 
+config INPUT_AKM09911
+	tristate "AKM 09911 eCompass"
+	default n
+	depends on I2C
+	help
+	 Say Y here if you want support for the AKM 09911 eCompass
+	 device.
+
+	 To compile this driver as a module, choose M here: the
+	 module will be called akm09911.
+
 config INPUT_APDS9702
 	tristate "APDS9702 proximity driver"
 	depends on I2C
