--- a/arch/arm/configs/bcm23550_java_c_edn000_2Gb_defconfig
+++ b/arch/arm/configs/bcm23550_java_c_edn000_2Gb_defconfig
@@ -1481,10 +1481,10 @@ CONFIG_TARGET_LOCALE_CHN=y
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_BCMDHD_4334 is not set
-CONFIG_BCM4330=y
+# CONFIG_BCM4330 is not set
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_wifi_4330.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/vendor/firmware/fw_wifi_nvram_4330.txt"
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_LIBERTAS is not set
