--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1176,9 +1176,17 @@ config MACH_FSM9XXX_SURF
 	  chipset based SURF evaluation board and
 	  FFA board.
 
+config MACH_SONY_SHINANO
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Shinano"
+	help
+	  Support for the SONY Mobile Rhine board.
+	  It is based on QCOM MSM8974 AB chipset.
+
 config MACH_SONY_SIRIUS
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Sirius"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Sirius device.
 	  It is based on QCOM MSM8974 AB chipset.
@@ -1188,6 +1196,7 @@ config MACH_SONY_SIRIUS
 config MACH_SONY_CASTOR
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Castor"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Castor device.
 	  It is based on QCOM MSM8974 AB chipset.
@@ -1197,6 +1206,7 @@ config MACH_SONY_CASTOR
 config MACH_SONY_CASTOR_WINDY
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Castor Windy"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Castor Windy device.
 	  It is based on QCOM APQ8074 AB chipset.
@@ -1206,6 +1216,7 @@ config MACH_SONY_CASTOR_WINDY
 config MACH_SONY_LEO
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Leo"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Leo device.
 	  It is based on QCOM MSM8974 AC chipset.
@@ -1215,6 +1226,7 @@ config MACH_SONY_LEO
 config MACH_SONY_ARIES
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Aries"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Aries device.
 	  It is based on QCOM MSM8974 AC chipset.
@@ -1224,6 +1236,7 @@ config MACH_SONY_ARIES
 config MACH_SONY_SCORPION
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Scorpion"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Scorpion device.
 	  It is based on QCOM MSM8974 AC chipset.
@@ -1233,6 +1246,7 @@ config MACH_SONY_SCORPION
 config MACH_SONY_SCORPION_WINDY
 	depends on ARCH_MSM8974
 	bool "Sony Mobile Scorpion Windy"
+	select MACH_SONY_SHINANO
 	help
 	  Support for the SONY Mobile Scorpion Windy device.
 	  It is based on QCOM APQ8074 AC chipset.
