--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -652,14 +652,23 @@ config QPNP_MISC
 	  is available on the current PMIC chip.
 
 config NFC_PN547
-	tristate "NFC driver for PN547"
+	bool "NXP PN547 NFC Controller Driver"
 	depends on I2C
 	default n
 	help
-	  This option enables device driver for PN547.
-	  GPIO, PMIC GPIO and MPP configurations are controlled.
-	  The sysfs files provides the interface to send and receive
-	  the data, response and notification.
+	  NXP PN547 Near Field Communication controller support.
+	  This option enables device driver support for the NFC.
+	  It is used by many services. NFC is fully controlled using I2C
+	  to communicate the AP chip.
+
+config NFC_PN547_PMC8974_CLK_REQ
+	bool "NXP PN547 NFC Controller Driver"
+	depends on I2C
+	default n
+	help
+	  PM8941 Clock request for NXP PN547 Near Field
+	  Communication controller support.
+	  This option enables d1 clock for NFC.
 
 config USB_HSIC_SMSC_HUB
 	tristate "Support for HSIC based MSM on-chip SMSC3503 HUB"
